--- a/meerkat_auth/translations/fr/LC_MESSAGES/messages.po
+++ b/meerkat_auth/translations/fr/LC_MESSAGES/messages.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2016-09-28 07:35+0000\n"
+"POT-Creation-Date: 2016-09-28 10:50+0000\n"
 "PO-Revision-Date: 2016-07-27 15:52+0100\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: fr\n"
@@ -18,161 +18,162 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.3.4\n"
 
-#: meerkat_auth/src/js/roles.js:73 meerkat_auth/src/js/users.js:247
+#: meerkat_auth/src/js/roles.js:73
 msgid "Country:"
-msgstr ""
+msgstr "Pays:"
 
-#: meerkat_auth/src/js/users.js:17 meerkat_auth/templates/login.html:43
+#: meerkat_auth/src/js/users.js:17 meerkat_auth/src/js/users.js:184
+#: meerkat_auth/templates/login.html:43
 msgid "Username"
-msgstr ""
+msgstr "Nom d'utilisateur"
 
-#: meerkat_auth/src/js/users.js:24
+#: meerkat_auth/src/js/users.js:24 meerkat_auth/src/js/users.js:191
 msgid "Email"
-msgstr ""
+msgstr "Email"
 
 #: meerkat_auth/src/js/users.js:31 meerkat_auth/templates/base.html:51
 msgid "Access"
-msgstr ""
+msgstr "Accès"
 
 #: meerkat_auth/src/js/users.js:38
 msgid "Account Creation"
-msgstr ""
+msgstr "Création de compte"
 
 #: meerkat_auth/src/js/users.js:46
 msgid "Data"
-msgstr ""
+msgstr "Données"
 
 #: meerkat_auth/src/js/users.js:128
 msgid "Are you sure you want to delete the following users?"
-msgstr ""
+msgstr "Voulez-vous supprimer les utilisateurs suivants?"
 
 #: meerkat_auth/src/js/users.js:149 meerkat_auth/src/js/users.js:575
 msgid ""
 "There has been a server error. Please contact administrator and try again"
 " later."
 msgstr ""
-
-#: meerkat_auth/src/js/users.js:184
-msgid "Username:"
-msgstr ""
-
-#: meerkat_auth/src/js/users.js:191
-msgid "Email:"
-msgstr ""
+"Il y a eu une erreur de serveur. S'il vous plaît contacter "
+"l'administrateur et réessayer plus tard."
 
 #: meerkat_auth/src/js/users.js:198
-msgid "Retype Email:"
-msgstr ""
+msgid "Retype Email"
+msgstr "E-mail"
 
-#: meerkat_auth/src/js/users.js:205
-msgid "Password:"
-msgstr ""
+#: meerkat_auth/src/js/users.js:205 meerkat_auth/templates/login.html:47
+msgid "Password"
+msgstr "Mot de passe"
 
 #: meerkat_auth/src/js/users.js:212
-msgid "Retype Password:"
-msgstr ""
+msgid "Retype Password"
+msgstr "Mot de passe"
 
 #: meerkat_auth/src/js/users.js:219
-msgid "Creation time:"
-msgstr ""
+msgid "Creation time"
+msgstr "Date de création"
 
 #: meerkat_auth/src/js/users.js:225
-msgid "Last update:"
-msgstr ""
+msgid "Last update"
+msgstr "Dernière mise à jour"
 
 #: meerkat_auth/src/js/users.js:237
 msgid "Add New Access"
-msgstr ""
+msgstr "Ajouter un nouvel accès"
+
+#: meerkat_auth/src/js/users.js:247
+msgid "Country"
+msgstr "Pays"
 
 #: meerkat_auth/src/js/users.js:261
-msgid "Access Role:"
-msgstr ""
+msgid "Access Role"
+msgstr "Rôle d'accès"
 
 #: meerkat_auth/src/js/users.js:289
 msgid "Complete access from: "
-msgstr ""
+msgstr "Accès complet à partir de: "
 
 #: meerkat_auth/src/js/users.js:292
 msgid "Does not inherit any access."
-msgstr ""
+msgstr "Ne pas hériter tout accès."
 
 #: meerkat_auth/src/js/users.js:304
 msgid "Add Access"
-msgstr ""
+msgstr "Ajouter accès"
 
 #: meerkat_auth/src/js/users.js:309
 msgid "Select Current Access:"
-msgstr ""
+msgstr "Sélectionnez Accès actuel:"
 
 #: meerkat_auth/src/js/users.js:329
 msgid "Delete Access"
-msgstr ""
+msgstr "Supprimer l'accès"
 
 #: meerkat_auth/src/js/users.js:339 meerkat_auth/src/js/users.js:425
 msgid "Edit Data"
-msgstr ""
+msgstr "Modifier les données"
 
 #: meerkat_auth/src/js/users.js:347
 msgid "Data Value:"
-msgstr ""
+msgstr "Valeur de données:"
 
 #: meerkat_auth/src/js/users.js:351 meerkat_auth/src/js/users.js:436
 msgid "Add Data"
-msgstr ""
+msgstr "Ajouter des données"
 
 #: meerkat_auth/src/js/users.js:356
 msgid "Select Current Data:"
-msgstr ""
+msgstr "Sélectionnez Données actuelles:"
 
 #: meerkat_auth/src/js/users.js:380
 msgid "Delete Data"
-msgstr ""
+msgstr "Supprimer les données"
 
 #: meerkat_auth/src/js/users.js:396
 msgid "Create User"
-msgstr ""
+msgstr "Créer un utilisateur"
 
 #: meerkat_auth/src/js/users.js:396
 msgid "Submit Changes"
-msgstr ""
+msgstr "Soumettre des changements"
 
 #: meerkat_auth/src/js/users.js:472
 msgid "Are you sure you want to delete this data?"
-msgstr ""
+msgstr "Voulez-vous supprimer ces données?"
 
 #: meerkat_auth/src/js/users.js:523
 msgid "Are you sure you want to delete this access?"
-msgstr ""
+msgstr "Voulez-vous supprimer cet accès?"
 
 #: meerkat_auth/src/js/users.js:549
 msgid "Working"
-msgstr ""
+msgstr "En Travaillant"
 
 #: meerkat_auth/src/js/users.js:641
 msgid "Fields must be Matching."
-msgstr ""
+msgstr "Les champs doivent être les mêmes"
 
 #: meerkat_auth/src/js/users.js:670
 msgid "Invalid username.  Username already exists."
-msgstr ""
+msgstr "Nom d'utilisateur invalide. Le nom d'utilisateur existe déjà."
 
 #: meerkat_auth/templates/base.html:7 meerkat_auth/templates/login.html:8
-msgid "Authentication and User Management | Meerkat Public Health Surveillance"
+msgid "Authentication and User Management | Public Health Surveillance"
 msgstr ""
-"Authentification et Gestion des Utilisateurs | Meerkat Surveillance de la"
-" Santé Publique"
+"Authentification et Gestion des Utilisateurs | Surveillance de la Santé "
+"Publique"
 
 #: meerkat_auth/templates/base.html:16 meerkat_auth/templates/login.html:15
 msgid "This website uses cookies to ensure you get the best experience."
 msgstr ""
+"Ce site utilise des cookies pour vous assurer d'obtenir la meilleure "
+"expérience."
 
 #: meerkat_auth/templates/base.html:17 meerkat_auth/templates/login.html:16
 msgid "I Understand"
-msgstr ""
+msgstr "Je comprends"
 
 #: meerkat_auth/templates/base.html:18 meerkat_auth/templates/login.html:17
 msgid "More information"
-msgstr ""
+msgstr "Plus d'information"
 
 #: meerkat_auth/templates/base.html:35
 msgid "Toggle navigation"
@@ -184,8 +185,8 @@ msgstr "Authentification et Gestion des Utilisateurs"
 
 #: meerkat_auth/templates/base.html:42 meerkat_auth/templates/base.html:89
 #: meerkat_auth/templates/login.html:29
-msgid "Meerkat Public Health Surveillance"
-msgstr "Meerkat Surveillance de la Santé Publique"
+msgid "Public Health Surveillance"
+msgstr "Surveillance de la Santé Publique"
 
 #: meerkat_auth/templates/base.html:50
 #: meerkat_auth/templates/users/index.html:30
@@ -194,34 +195,29 @@ msgstr "Utilisateurs"
 
 #: meerkat_auth/templates/base.html:53
 msgid "Log out"
-msgstr ""
+msgstr "Se déconnecter"
 
 #: meerkat_auth/templates/js.html:23
 msgid "Choose a language"
-msgstr ""
+msgstr "Choisissez une langue"
 
 #: meerkat_auth/templates/login.html:35
 msgid "Login"
-msgstr ""
-
-#: meerkat_auth/templates/login.html:47
-msgid "Password"
-msgstr ""
+msgstr "S'identifier"
 
 #: meerkat_auth/templates/roles/index.html:6
 msgid "Access Levels"
-msgstr ""
+msgstr "Niveaux d'accès"
 
 #: meerkat_auth/templates/roles/index.html:15
 msgid "Access Network"
-msgstr ""
+msgstr "Réseau d'accès"
 
 #: meerkat_auth/templates/users/index.html:5
 msgid "User Manager"
-msgstr ""
+msgstr "Gestionnaire des utilisateurs"
 
 #: meerkat_auth/templates/users/index.html:14
 msgid "User Details"
-msgstr ""
-
+msgstr "Détails de l'utilisateur"
 
